--- a/3d/wedding_3d.html
+++ b/3d/wedding_3d.html
@@ -864,9 +864,6 @@
 
     <div class="wedding3D">
 
-
-
-
       <section class="earrings-banner py-5">
 
         <div class="container ">
@@ -876,9 +873,8 @@
               <h1>Classic Wedding Bands </h1>
               <h3>Solitaire studs </h3>
               <p class="my-4 p-wrapper">
-                Classical, Tradition, Simplicity Those are the words thought of when creating Michael Trio wedding
-                Bands.
-                The symbol of married spouses declaring their life-love love of fidelity to each other.
+                A tangible reminder of your wedding vows, Michael Trio's classic wedding bands are the perfect symbol of
+                your love story.
               </p>
             </div>
           </div>
@@ -896,10 +892,10 @@
               <div class="studs-nav ">
 
                 <a href="https://www.michaeltrio.com/jewellery/earrings/studs" class="btn btn-blue-outline "
-                  role="button">Earrings (Studs) </a>
+                  role="button">Diamond Studs </a>
 
                 <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline"
-                  role="button">Pendants </a>
+                  role="button">Diamond Pendants </a>
 
                 <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline active"
                   role="button">Wedding Bands </a>
@@ -910,57 +906,7 @@
         </div>
       </section>
 
-      <section class="bg-lightgrey py-5">
 
-        <div class="container">
-          <div class="row ">
-            <div class="col-sm-24 text-center">
-              <h1>Low Dome Wedding Bands</h1>
-
-              <p class="my-4 p-wrapper">Low dome wedding bands is almost the same as high dome it is a little bit more
-                comfortable to wear with less metal being used so it will be lighter in weight which make it more
-                afforable, and it astill have a traditional look.</p>
-
-            </div>
-          </div>
-
-          <div class="row pt-4">
-            <div class="col-sm-12 text-center pb-4">
-
-              <div id="wbLowDome_3D"></div>
-              <h3 class="my-4">18K Gold</h3>
-              <div>
-                <div class="btn btn-white-gold" onclick="renderData(wbLowDome, 'wbLowDome', 'WhiteGold')">White
-                  Gold</div>
-                <div class="btn btn-yellow-gold" onclick="renderData(wbLowDome, 'wbLowDome', 'YellowGold')">Yellow Gold
-                </div>
-                <div class="btn btn-rose-gold" onclick="renderData(wbLowDome, 'wbLowDome', 'RoseGold')">Rose
-                  Gold</div>
-                <div class="btn btn-platinum" onclick="renderData(wbLowDome, 'wbLowDome', 'Platinum')">Platinum</div>
-              </div>
-
-            </div>
-            <div class="col-sm-12  ">
-
-
-              <div class="col-xs-24  ">
-                <h1 class="text-center  pt-4"> Choose Your Ring Width </h1>
-              </div>
-
-
-              <div id="wbLowDome" class="row earrings2021" style="flex-wrap: wrap;padding:0px 20px;display: block; ">
-              </div>
-
-
-            </div>
-
-          </div>
-
-
-        </div>
-
-
-      </section>
 
 
       <section class="bg-lightgrey py-5">
@@ -970,8 +916,10 @@
             <div class="col-sm-24 text-center">
               <h1>High Dome Wedding Bands </h1>
 
-              <p class="my-4 p-wrapper">High dome wedding ban Reflects light from every angle this look is very classic
-                and traditional. it is polish and formal.</p>
+              <p class="my-4 p-wrapper">
+                The High Dome Wedding Band is a timeless wedding band style that will last a lifetime. The domed cross
+                section portrays an effortless style and makes this wedding band perfect for everyday wear.
+              </p>
 
             </div>
           </div>
@@ -1014,6 +962,59 @@
 
 
       </section>
+      <section class="bg-lightgrey py-5">
+
+        <div class="container">
+          <div class="row ">
+            <div class="col-sm-24 text-center">
+              <h1>Low Dome Wedding Bands</h1>
+
+              <p class="my-4 p-wrapper">
+
+                The Low Dome Wedding Band is a classic variation of the traditional High Dome Wedding Band. With lesser
+                materials between your fingers, this wedding band provides increased comfort.
+              </p>
+
+            </div>
+          </div>
+
+          <div class="row pt-4">
+            <div class="col-sm-12 text-center pb-4">
+
+              <div id="wbLowDome_3D"></div>
+              <h3 class="my-4">18K Gold</h3>
+              <div>
+                <div class="btn btn-white-gold" onclick="renderData(wbLowDome, 'wbLowDome', 'WhiteGold')">White
+                  Gold</div>
+                <div class="btn btn-yellow-gold" onclick="renderData(wbLowDome, 'wbLowDome', 'YellowGold')">Yellow Gold
+                </div>
+                <div class="btn btn-rose-gold" onclick="renderData(wbLowDome, 'wbLowDome', 'RoseGold')">Rose
+                  Gold</div>
+                <div class="btn btn-platinum" onclick="renderData(wbLowDome, 'wbLowDome', 'Platinum')">Platinum</div>
+              </div>
+
+            </div>
+            <div class="col-sm-12  ">
+
+
+              <div class="col-xs-24  ">
+                <h1 class="text-center  pt-4"> Choose Your Ring Width </h1>
+              </div>
+
+
+              <div id="wbLowDome" class="row earrings2021" style="flex-wrap: wrap;padding:0px 20px;display: block; ">
+              </div>
+
+
+            </div>
+
+          </div>
+
+
+        </div>
+
+
+      </section>
 
       <section class="bg-lightgrey py-5">
 
@@ -1022,8 +1023,10 @@
             <div class="col-sm-24 text-center">
               <h1>Flat Dome Wedding Bands </h1>
 
-              <p class="my-4 p-wrapper">Flat dome wedding band has a odern non-traditional look, with a defined edge and
-                a cylindrical</p>
+              <p class="my-4 p-wrapper">
+                The Flat Dome Wedding Band features a flat smooth cylindrical shape with a defined edge. This wedding
+                band is perfect for those looking for a contemporary wedding band.
+              </p>
 
             </div>
           </div>
