--- a/landing_pages/home.html
+++ b/landing_pages/home.html
@@ -1251,7 +1251,7 @@
                         <a href="https://www.michaeltrio.com/jewellery/rings" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
-                                    <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-ring.jpg" alt=""
+                                    <img src="https://www.michaeltrio.com/pub/media/0home/home-ring.jpg" alt=""
                                         class="w-100">
                                 </div>
                                 <h5 class="py-3 for-title">Ring</h5>
@@ -1263,8 +1263,8 @@
                         <a href="https://www.michaeltrio.com/jewellery/earrings" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
-                                    <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-earring.jpg"
-                                        alt="" class="w-100">
+                                    <img src="https://www.michaeltrio.com/pub/media/0home/home-earrings.jpg" alt=""
+                                        class="w-100">
                                 </div>
                                 <h5 class="py-3 for-title">Earrings</h5>
 
@@ -1275,8 +1275,8 @@
                         <a href="https://www.michaeltrio.com/jewellery/necklaces" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
-                                    <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-necklace.jpg"
-                                        alt="" class="w-100">
+                                    <img src="https://www.michaeltrio.com/pub/media/0home/home-necklace.jpg" alt=""
+                                        class="w-100">
                                 </div>
                                 <h5 class="py-3 for-title">Necklace</h5>
 
@@ -1288,8 +1288,8 @@
                         <a href="https://www.michaeltrio.com/jewellery/bracelets" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
-                                    <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-bracelet.jpg"
-                                        alt="" class="w-100">
+                                    <img src="https://www.michaeltrio.com/pub/media/0home/home-bracelet.jpg" alt=""
+                                        class="w-100">
                                 </div>
                                 <h5 class="py-3 for-title">Bracelet</h5>
                             </div>
